test/expected/declare_nmo_brackets_rcki_v.out
declare [] as non-member operator (reference to const S, int)
        ^
9: error: operator "[]" can only be a member
